  test case in accordion
- parsing get param testman_cnum on attachment creation javascript (see
  TestManager.py class TestManagerAttachmentScript)
- event to update test comment if attachment is inserted with change number of
  comment (testman_cnum)
- removing 'commit' and 'rollback' statements from schema.py
  as they are not to be emitted anymore since Trac 1.0
- updated test cases
  [ohockel]

0.4.0 (2013-05-08)
------------------

- fix automatic creation of needed custom tables
  [hplocher]
- fix to alter table and add tester column
  [ohockel]
- initial projecteval macro with dependencies
  [ohockel]
- fixing bug on iterating over string when restarting
  broken testplans
  [ohockel]
- now sets the tester of a tc, who executes it
  [lmende]

0.3.1 (2013-01-16)
------------------

- fixing bug on clicking on a testcase without redirecting to the testquery macro
[otto]

- TestCaseAccordion now enforces specifying a comment when setting a step to failed.
  this fixes #40
[hplocher]

0.3.0 (2012-10-26)
----------------

- enhancement #32 the possibility of merging multiple
  testcases with the same name on testevalmacro
- enhancement #31 assign a testcase multiple without
  assigning it to a specific tester
- fixed bug on the evalmacro with multiple testruns
  this fixes #39
- fixed bug on wildcard-evaluation where testcases are
  sorted out
- known bug #40 click on failed without comment passes
  silently
[otto]

0.2.3 (2012-10-19)
------------------

- fixing bug on the wikilinks of the testplanmacro
  this fixes #37
[otto]

0.2.2 (2012-10-18)
------------------

- fixing comment bug
- alphabetical sorting of testcases
[otto]

0.2.1 (2012-09-14)
------------------

- fixed bug on restarting multiple defect testruns
- fixed bug on monitoring and evaluating multiple testruns
- added TestcaseTestRunEvaluateMultiple
[otto]

0.2 (2012-07-10)
----------------

- refactored safe_unicode error handling in all mods