@@ -30,7 +30,22 @@
     }
       .trigger {
           cursor:pointer;
+          border: 1px solid black;
+          padding: 5px;
+          -moz-border-radius:10px; /* Firefox */
+          -webkit-border-radius:10px; /* Safari, Chrome */
+          border-radius:10px; /* CSS3 */
       }
+    body{
+        background-color: silver;
+    }
+    div .toggle_container {
+      border: 1px solid black;
+      padding: 5px;
+      -moz-border-radius:10px; /* Firefox */
+      -webkit-border-radius:10px; /* Safari, Chrome */
+      border-radius:10px; /* CSS3 */
+    }
   </style>
   </head>
 
