@@ -17,6 +17,7 @@ Changelog
 - removing 'commit' and 'rollback' statements from schema.py
   as they are not to be emitted anymore since Trac 1.0
 - updated test cases
+- improved accordion css
   [ohockel]
 
 0.4.0 (2013-05-08)
